--- a/Mensajeria/src/index.html
+++ b/Mensajeria/src/index.html
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body style="background: #444;">
   <app-root></app-root>
 </body>
 
